--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <head>
     <link rel="stylesheet" href="./style.css">
     <link rel="prefetch" href="./images/explosion.gif"/>
+    <meta content="Fomemon" property="og:title" />
+    <meta content="LA NUMERON ONE PAGINA WEB DE FOMEMON PARA TENER FOMEMON PORQUE ES DE FOMEMON OFICIAL!" property="og:description" />
+    <meta content="https://fomemon.github.io/FomemonWeb/" property="og:url" />
+    <meta content="./images/background0.png" property="og:image" />
+    <meta content="#a2ff6c" data-react-helmet="true" name="theme-color" />
 </head>
 <body class="hideMouse">
     <img src="./images/dancing_baby.gif" alt="Focking babe mate" class="littleShit" style="top:0px">
