--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta content="Fomemon" property="og:title" />
     <meta content="LA NUMERON ONE PAGINA WEB DE FOMEMON PARA TENER FOMEMON PORQUE ES DE FOMEMON OFICIAL!" property="og:description" />
     <meta content="https://fomemon.github.io/FomemonWeb/" property="og:url" />
-    <meta content="./images/background0.png" property="og:image" />
+    <meta content="https://media.discordapp.net/attachments/967790313039093831/1294313302004076626/International_Pokemon_logo.svg.png" property="og:image" />
     <meta content="#a2ff6c" data-react-helmet="true" name="theme-color" />
 </head>
 <body class="hideMouse">
