--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body class="hideMouse">
     <img src="./images/dancing_baby.gif" alt="Focking babe mate" class="littleShit" style="top:0px">
+    <img src="./images/jaimedron.png" style="position:fixed; right:0px; bottom: 0px; width: 10%;">
     <h1>¡¡BIENVENIDO A FOMEMON PAGE!!</h1>
     <marquee scrollamount="30">
         <img src="./images/moonwalk.gif">
@@ -89,7 +90,9 @@
             </div>
         </div>
     </div>
+
     <img src="./images/goof_ball.webp" height="50px" class="centerImage">
+
     <div class="changesDiv">
         <h1>Novedades de la versión 0.2</h1>
         <div>
@@ -178,6 +181,9 @@
             </p>
         </div>
     </div>
-    <img src="./images/meme.png">
+
+    <h1 style="color: white; text-align: center; ">MOMENTO DESCARGA</h1>
+    <h2 style="color: white; text-align: center;">¡HAZ CLICK <a href="https://cdn.discordapp.com/attachments/1282877839896612905/1294385050942701568/Fomemon_V0.2.rar?ex=670ad184&is=67098004&hm=8ae1f2b0c3d9524e7bdffd7cd3d4f951f896a290eeb8f5a899829884fb4f7d39&" download="Fomemon V0.2">AQUI</a> PARA DESCARGAR EL FANGAME!</h2>
+    <p style="color: white;">Pagina web hecha por JAIMEDRON, Fomemon hecho por KekProduct</p>
     <script src="./script.js"></script>
 </body>
