--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" href="./style.css">
     <link rel="prefetch" href="./images/explosion.gif"/>
+    <title>Fomemon Page</title>
     <meta content="Fomemon" property="og:title" />
     <meta content="LA NUMERON ONE PAGINA WEB DE FOMEMON PARA TENER FOMEMON PORQUE ES DE FOMEMON OFICIAL!" property="og:description" />
     <meta content="https://fomemon.github.io/FomemonWeb/" property="og:url" />
