--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body class="hideMouse">
     <img src="./images/dancing_baby.gif" alt="Focking babe mate" class="littleShit" style="top:0px">
-    <img src="./images/jaimedron.png" style="position:fixed; right:0px; bottom: 0px; width: 10%;">
+    <a target="_blank" href="https://linktr.ee/JAIMEDRON"style="position:absolute; right:10%; top: 700px; width: 10%;"><img src="./images/jaimedron.png" style="width: 100%;"></a>
+    <img src="./images/ad1 (3).png" style="position:absolute; left:5%; top: 700px; width: 20%;">
+    <img src="./images/ad0.png" style="position:absolute; right:5%; top: 1000px; width: 15%;">
+    <img src="./images/ad2 cuba.webp" style="position:absolute; left:5%; top: 1800px; width: 20%;">
+    <a target="_blank" href="https://dle.rae.es/chamba"style="position:absolute; right:10%; top: 2000px; width: 10%;"><img src="./images/ad3 money.gif" style="width: 100%;"></a>
+
     <h1>¡¡BIENVENIDO A FOMEMON PAGE!!</h1>
     <marquee scrollamount="30">
         <img src="./images/moonwalk.gif">
@@ -71,7 +76,7 @@
             <i>"El mejor fangame de la historia"</i>
             <div class="profile">
                 <img src="./images/shigueru.png" alt="">
-                <a href="https://www.youtube.com/watch?v=JODQ7FlAaXg"><i><strong><b>-Shigeru Miyamoto</b></strong></i></a>
+                <a target="_blank" href="https://www.youtube.com/watch?v=JODQ7FlAaXg"><i><strong><b>-Shigeru Miyamoto</b></strong></i></a>
             </div>
         </div>
         
@@ -79,7 +84,7 @@
             <i>"Lo mejor que he visto después de los pies de las actrices que contrataba"</i>
             <div class="profile">
                 <img src="./images/kojima.png" alt="">
-                <a href="https://inciclopedia.org/wiki/Hideo_Kojima"><i><strong><b>-Hideo Kojima</b></strong></i></a>
+                <a target="_blank" href="https://www.youtube.com/watch?v=uKeKuaJ4nlw"><i><strong><b>-Hideo Kojima</b></strong></i></a>
             </div>
         </div>
         
@@ -87,7 +92,7 @@
             <i>"Es mejor que los juegos que nosotros desarrollamos"</i>
             <div class="profile">
                 <img src="./images/game_freak.png" alt="">
-                <a href="https://es.wikipedia.org/wiki/Pereza"><i><strong><b>-Game Freak</b></strong></i></a>
+                <a target="_blank" href="https://es.wikipedia.org/wiki/Pereza"><i><strong><b>-Game Freak</b></strong></i></a>
             </div>
         </div>
     </div>
