--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a target="_blank" href="https://linktr.ee/JAIMEDRON"style="position:absolute; right:10%; top: 700px; width: 10%;"><img src="./images/jaimedron.png" style="width: 100%;"></a>
     <img src="./images/ad1 (3).png" style="position:absolute; left:5%; top: 700px; width: 20%;">
     <img src="./images/ad0.png" style="position:absolute; right:5%; top: 1000px; width: 15%;">
-    <img src="./images/ad2 cuba.webp" style="position:absolute; left:5%; top: 1800px; width: 20%;">
+    <img src="./images/se vende.gif" style="position:absolute; left:5%; top: 1800px; width: 20%;">
     <a target="_blank" href="https://dle.rae.es/chamba"style="position:absolute; right:10%; top: 2000px; width: 10%;"><img src="./images/ad3 money.gif" style="width: 100%;"></a>
 
     <h1>¡¡BIENVENIDO A FOMEMON PAGE!!</h1>
