--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </div>
 
     <h1 style="color: white; text-align: center; ">MOMENTO DESCARGA</h1>
-    <h2 style="color: white; text-align: center;">¡HAZ CLICK <a href="https://cdn.discordapp.com/attachments/1282877839896612905/1294385050942701568/Fomemon_V0.2.rar?ex=670ccbc4&is=670b7a44&hm=3f9b7d0ca760a126ea7f115eec0911c2c338fdc4ca5c04fffd645d1ce348f826&" download="Fomemon V0.2">AQUI</a> PARA DESCARGAR EL FANGAME!</h2>
+    <h2 style="color: white; text-align: center;">¡HAZ CLICK <a target="_blank" href="https://www.mediafire.com/file/5km1ylhfuomeh8u/Fomemon_V0.2.rar/file">AQUI</a> PARA DESCARGAR EL FANGAME!</h2>
     <p style="color: white;">Pagina web hecha por JAIMEDRON, Fomemon hecho por KekProduct</p>
     <script src="./script.js"></script>
 </body>
