--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </div>
 
     <h1 style="color: white; text-align: center; ">MOMENTO DESCARGA</h1>
-    <h2 style="color: white; text-align: center;">¡HAZ CLICK <a target="_blank" href="https://www.mediafire.com/file/5km1ylhfuomeh8u/Fomemon_V0.2.rar/file">AQUI</a> PARA DESCARGAR EL FANGAME!</h2>
+    <h2 style="color: white; text-align: center;">¡HAZ CLICK <a target="_blank" href="https://drive.google.com/file/d/1exgBlos7KhlLNihoniA_mn7Jkst3FoFf/view?usp=sharing">AQUI</a> PARA DESCARGAR EL FANGAME!</h2>
     <p style="color: white;">Pagina web hecha por JAIMEDRON, Fomemon hecho por KekProduct</p>
     <script src="./script.js"></script>
 </body>
